<resources>
    <!-- Activities -->
    <string name="app_name">Armenian Alphabet</string>
    <string name="alphabet_title">Armenian Alphabet: Letters</string>
    <string name="learn_title">Armenian Alphabet: Learn</string>
    <string name="quiz_title">Armenian Alphabet: Quiz</string>
    <string name="settings_title">Armenian Alphabet: Settings</string>
    <string name="policy_title">Armenian Alphabet: Privacy Policy</string>
    <string name="about_title">Armenian Alphabet: About</string>

    <!-- Menu -->
    <string name="menuEntry1">Alphabet</string>
    <string name="menuEntry2">Learn</string>
    <string name="menuEntry3">Quiz</string>
    <string name="menuEntry4">Pronunciation switch</string>
    <string name="menuEntry5">Privacy Policy</string>
    <string name="menuEntry6">About</string>

    <!-- Alphabet -->
    <string name="alphabetUpper">Capital:</string>
    <string name="alphabetLower">Lowercase:</string>
    <string name="alphabetPronounce">Pronunciation:</string>
    <string name="alphabetButtonListen">Listen</string>
    <string name="alphabetButtonClose">Close</string>
    <string name="alphabetButtonPrevious">Back</string>
    <string name="alphabetButtonNext">Next</string>

    <!-- Init Strings -->
    <string name="question" translatable="false">QUE</string>
    <string name="answer1" translatable="false">ANS</string>
    <string name="answer2" translatable="false">ANS</string>
    <string name="answer3" translatable="false">ANS</string>
    <string name="answer4" translatable="false">ANS</string>
    <string name="result" translatable="false">RESULT</string>

    <!-- Letters eastern armenian-->
    <string name="letter1" translatable="false">Ա;ա;a[ɑ]</string>
    <string name="letter2" translatable="false">Բ;բ;b[b]</string>
    <string name="letter3" translatable="false">Գ;գ;g[g]</string>
    <string name="letter4" translatable="false">Դ;դ;d[d]</string>
    <string name="letter5" translatable="false">Ե;ե;e[jɛ]</string>
    <string name="letter6" translatable="false">Զ;զ;z[z]</string>
    <string name="letter7" translatable="false">Է;է;ē[ɛ]</string>
    <string name="letter8" translatable="false">Ը;ը;ə[ə]</string>
    <string name="letter9" translatable="false">Թ;թ;t‘[tʰ]</string>
    <string name="letter10" translatable="false">Ժ;ժ;zh ž[ʒ]</string>
    <string name="letter11" translatable="false">Ի;ի;i[i]</string>
    <string name="letter12" translatable="false">Լ;լ;l[l]</string>
    <string name="letter13" translatable="false">Խ;խ;kh x[χ]</string>
    <string name="letter14" translatable="false">Ծ;ծ;t͡s c[t͡s]</string>
    <string name="letter15" translatable="false">Կ;կ;k[kʼ]</string>
    <string name="letter16" translatable="false">Հ;հ;h[h]</string>
    <string name="letter17" translatable="false">Ձ;ձ;d͡z j[d͡z]</string>
    <string name="letter18" translatable="false">Ղ;ղ;gh ł[ʁ]</string>
    <string name="letter19" translatable="false">Ճ;ճ;ch č[t͡ʃ]</string>
    <string name="letter20" translatable="false">Մ;մ;m[m]</string>
    <string name="letter21" translatable="false">Յ;յ;y[j]</string>
    <string name="letter22" translatable="false">Ն;ն;n[n]</string>
    <string name="letter23" translatable="false">Շ;շ;sh š[ʃ]</string>
    <string name="letter24" translatable="false">Ո;ո;vo[vɔ]</string>
    <string name="letter25" translatable="false">Չ;չ;tsh č‘[t͡ʃʰ]</string>
    <string name="letter26" translatable="false">Պ;պ;p[pʼ]</string>
    <string name="letter27" translatable="false">Ջ;ջ;dzh ǰ[ʤ]</string>
    <string name="letter28" translatable="false">Ռ;ռ;r̄[r]</string>
    <string name="letter29" translatable="false">Ս;ս;s[s]</string>
    <string name="letter30" translatable="false">Վ;վ;v[v]</string>
    <string name="letter31" translatable="false">Տ;տ;t[tʼ]</string>
    <string name="letter32" translatable="false">Ր;ր;re r[ɾ]</string>
    <string name="letter33" translatable="false">Ց;ց;t͡sʰ c‘[t͡sʰ]</string>
    <string name="letter34" translatable="false">Ւ;ւ;ve w[w]</string>
    <string name="letter35" translatable="false">Փ;փ;ph p‘[pʰ]</string>
    <string name="letter36" translatable="false">Ք;ք;k‘[kʰ]</string>
    <string name="letter37" translatable="false">և;և;ew ev[jɛv]</string>
    <string name="letter38" translatable="false">Օ;օ;ô[o]</string>
    <string name="letter39" translatable="false">Ֆ;ֆ;f[f]</string>
    <!-- Letters western armenian-->
    <string name="wletter1" translatable="false">Ա;ա;a[ɑ]</string>
    <string name="wletter2" translatable="false">Բ;բ;p[p]</string>
    <string name="wletter3" translatable="false">Գ;գ;k[k]</string>
    <string name="wletter4" translatable="false">Դ;դ;t[t]</string>
    <string name="wletter5" translatable="false">Ե;ե;e[jɛ]</string>
    <string name="wletter6" translatable="false">Զ;զ;z[z]</string>
    <string name="wletter7" translatable="false">Է;է;ē[ɛ]</string>
    <string name="wletter8" translatable="false">Ը;ը;ə[ə]</string>
    <string name="wletter9" translatable="false">Թ;թ;t‘[tʰ]</string>
    <string name="wletter10" translatable="false">Ժ;ժ;zh ž[ʒ]</string>
    <string name="wletter11" translatable="false">Ի;ի;i[i]</string>
    <string name="wletter12" translatable="false">Լ;լ;l[l]</string>
    <string name="wletter13" translatable="false">Խ;խ;kh x[χ]</string>
    <string name="wletter14" translatable="false">Ծ;ծ;dz[dz]</string>
    <string name="wletter15" translatable="false">Կ;կ;g[g]</string>
    <string name="wletter16" translatable="false">Հ;հ;oh[oh]</string>
    <string name="wletter17" translatable="false">Ձ;ձ;ts[ts]</string>
    <string name="wletter18" translatable="false">Ղ;ղ;gh ł[ʁ]</string>
    <string name="wletter19" translatable="false">Ճ;ճ;dj [dj]</string>
    <string name="wletter20" translatable="false">Մ;մ;m[m]</string>
    <string name="wletter21" translatable="false">Յ;յ;y[j]</string>
    <string name="wletter22" translatable="false">Ն;ն;n[n]</string>
    <string name="wletter23" translatable="false">Շ;շ;sh š[ʃ]</string>
    <string name="wletter24" translatable="false">Ո;ո;vo[vɔ]</string>
    <string name="wletter25" translatable="false">Չ;չ;tsh č‘[t͡ʃʰ]</string>
    <string name="wletter26" translatable="false">Պ;պ;b[b]</string>
    <string name="wletter27" translatable="false">Ջ;ջ;t ch [tch]</string>
    <string name="wletter28" translatable="false">Ռ;ռ;r̄[r]</string>
    <string name="wletter29" translatable="false">Ս;ս;s[s]</string>
    <string name="wletter30" translatable="false">Վ;վ;v[v]</string>
    <string name="wletter31" translatable="false">Տ;տ;d[d]</string>
    <string name="wletter32" translatable="false">Ր;ր;re r[ɾ]</string>
    <string name="wletter33" translatable="false">Ց;ց;t͡sʰ c‘[t͡sʰ]</string>
    <string name="wletter34" translatable="false">Ւ;ւ;ve w[w]</string>
    <string name="wletter35" translatable="false">Փ;փ;ph p‘[pʰ]</string>
    <string name="wletter36" translatable="false">Ք;ք;k‘[kʰ]</string>
    <string name="wletter37" translatable="false">և;և;ew ev[jɛv]</string>
    <string name="wletter38" translatable="false">Օ;օ;ô[o]</string>
    <string name="wletter39" translatable="false">Ֆ;ֆ;f[f]</string>

    <!-- About -->
    <string name="aboutText">
        The Armenian alphabet (Arm.: Հայոց գրեր Hayots grer or Հայոց այբուբեն Hayots aybuben) is an alphabetical writing system used to write Armenian. It was developed around 405 CE by Mesrop Mashtots, an Armenian linguist and ecclesiastical leader, and originally included 36 letters and now includes 39.
        The Armenian word for "alphabet" is այբուբեն aybuben (Armenian pronunciation: [ɑjbubɛn]), named after the first two letters of the Armenian alphabet: Ա այբ ayb and Բ բեն ben. Armenian is written horizontally, left-to-right.\n\n
        <b>Special thanks to the Frederic Lemieux for the Western Armenian support.</b>\n\n
        <b>Developed by:</b> \n
        <i>• Dmitriy Ivanov:</i> https://d-k-ivanov.github.io \n
        <i>• Frederic Lemieux:</i> https://github.com/tagask
    </string>
    <string name="aboutCopyright">
        Copyright © 2016-2019 Dmitriy Ivanov \n
        Copyright © 2019-2019 Frederic Lemieux \n
        https://d-k-ivanov.github.io/
    </string>

    <!-- Western/Eastern switch -->
    <string name="eastern">Eastern</string>
    <string name="western">Western</string>
    <string name="easternPronunciation">Switch to Eastern</string>
    <string name="westernPronunciation">Switch to Western</string>
    <string name="enabled">\u0020armenian\u0020enabled</string>
</resources>
