<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:fitsSystemWindows="true"
    tools:context="com.pupupon.armenianalphabet.MainActivity"
    style="@style/AppTheme" >

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@android:color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:text="@string/question"
        android:id="@+id/textQuestion"
        style="@style/questionSection" />

    <LinearLayout
        android:id="@+id/answerRow1"
        style="@style/answerSection" >

        <Button
            android:text="@string/answer1"
            android:id="@+id/answer1"
            style="@style/answerButton" />

        <Button
            android:text="@string/answer2"
            android:id="@+id/answer2"
            style="@style/answerButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/answerRow2"
        style="@style/answerSection" >

        <Button
            android:text="@string/answer3"
            android:id="@+id/answer3"
            style="@style/answerButton" />

        <Button
            android:text="@string/answer4"
            android:id="@+id/answer4"
            style="@style/answerButton" />

    </LinearLayout>

    <TextView
        android:text="@string/result"
        android:id="@+id/textResult"
        style="@style/resultSection" />

</LinearLayout>