<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_alphabet"
    tools:context="com.pupupon.armenianalphabet.AlphabetActivity"
    android:fitsSystemWindows="true"
    android:gravity="center_vertical"
    style="@style/AppTheme" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout1" >
        <TextView
            android:text="@string/alphabetUpper"
            android:id="@+id/alphabetUpperCaseDesc"
            style="@style/alphabetDescription"/>

        <TextView
            android:text="upperCase"
            android:id="@+id/alphabetUpperCase"
            style="@style/alphabetLetter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout2" >
        <TextView
            android:text="@string/alphabetLower"
            android:id="@+id/alphabetLowerCaseDesc"
            style="@style/alphabetDescription" />

        <TextView
            android:text="lowerCase"
            android:id="@+id/alphabetLowerCase"
            style="@style/alphabetLetter" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout3" >

        <TextView
            android:text="@string/alphabetPronounce"
            android:id="@+id/alphabetIPADesc"
            style="@style/alphabetDescription" />

        <TextView
            android:text="IPA"
            android:id="@+id/alphabetIPA"
            style="@style/alphabetLetter" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/textAlphabetButtonListenHeight"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/alphabetButtonListen"
        android:id="@+id/alphabetListen"
        style="@style/alphabetListenButton" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout5"
        android:layout_gravity="center_horizontal" >
        <Button
            android:layout_gravity="center_vertical"
            android:text="@string/alphabetButtonPrevious"
            android:id="@+id/alphabetPrevious"
            style="@style/alphabetPrevButton" />
        <Button
            android:layout_gravity="center_vertical"
            android:text="@string/alphabetButtonNext"
            android:id="@+id/alphabetNext"
            style="@style/alphabetNextButton" />

    </LinearLayout>


</LinearLayout>